Fixed navbar spacing

--- a/src/App.css
+++ b/src/App.css
@@ -1,45 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Josefin+Sans&display=swap');
 
-
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
 :root {
   --sfly:rgb(143, 176, 187);
   --ssky: lightblue;
@@ -74,6 +34,7 @@ nav {
 /* Sets font size for my name on nav bar and ensures letters are all displayed in line */
 nav h1 {
   font-size: 30px;
+  margin-left: 1rem!important;
 }
 
 
